# codetwin

./: .gitignore  AGENTS.md  AGENT_INSTRUCTIONS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  NEW_ROADMAP.md  README.md  RELEASES.md  ROADMAP.md  cliff.toml  codetwin.toml  dist-workspace.toml  pyproject.toml  release.toml
.github/workflows/: changelog.yml  ci.yml  pr-main.yml  publish.yml  release.yml  release_npm.yml  release_pypi.yml
codetwin/: __init__.py  cli.py
codetwin/_bin/: codetwin-aarch64-darwin
crates/: README.md
crates/codetwin/: Cargo.toml
crates/codetwin-cli/: Cargo.toml
crates/codetwin-cli/src/: lib.rs
crates/codetwin-config/: Cargo.toml
crates/codetwin-config/src/: lib.rs
crates/codetwin-drivers/: Cargo.toml
crates/codetwin-drivers/src/: lib.rs
crates/codetwin-ir/: Cargo.toml
crates/codetwin-ir/src/: lib.rs
crates/codetwin-ir/src/ir/: edge.rs  mod.rs  module.rs
crates/codetwin-ir/tests/: ir.rs
crates/codetwin-legacy/: Cargo.toml
crates/codetwin-legacy/src/: lib.rs
crates/codetwin-legacy/src/cli/: diff.rs  init.rs  list.rs
crates/codetwin-legacy/src/config/: format.rs  mod.rs
crates/codetwin-legacy/src/diff/: mod.rs  report.rs
crates/codetwin-legacy/src/drivers/: mod.rs  rust.rs
crates/codetwin-legacy/src/ir/: model.rs  symbol.rs
crates/codetwin-legacy/src/layouts/: c4.rs  mod.rs  output_file.rs  project_overview.rs  registry.rs
crates/codetwin-legacy/src/pipeline/: merge.rs  mod.rs
crates/codetwin-legacy/src/render/: markdown.rs  mermaid.rs
crates/codetwin-legacy/src/snapshot/: mod.rs
crates/codetwin-legacy/tests/: cli.rs  config.rs  diff.rs  drivers.rs  ir.rs  layouts.rs  pipeline.rs  snapshot.rs
crates/codetwin-pipeline/: Cargo.toml
crates/codetwin-pipeline/src/: lib.rs
crates/codetwin-render/: Cargo.toml
crates/codetwin-render/src/: lib.rs
crates/codetwin/src/: main.rs
docs/: ROADMAP.md  architecture.md  drivers.md  layouts.md  src.md
docs/agents/: domain.md
examples/: python_sample.py  simple_layout.toml
scripts/: check_metadata.py  generate_releases.py  publish_pypi.py  release_npm.ts  release_pypi.py  sync_pyproject.py
src/: cli.rs  config.rs  discovery.rs  engine.rs  ir.rs  lib.rs  main.rs
src/app/: engine.rs
src/cli/: generate.rs  mod.rs  snapshot.rs
src/config/: layer.rs
src/core/: config.rs  discovery.rs  mod.rs
src/diff/: engine.rs
src/drivers/: go.rs  markdown.rs  mod.rs  python.rs  registry.rs  rust.rs  terminology.rs  trait_def.rs  typescript.rs
src/formatters/: folder_markdown.rs  mod.rs  one_per_file.rs  trait_def.rs
src/io/: fs_utils.rs
src/ir/: visibility.rs
src/layouts/: architecture_map.rs  dependency_graph.rs  folder_markdown.rs  layered.rs  metrics.rs  mod.rs  one_per_file.rs  readme_embedded.rs  trait_def.rs
src/pipeline/: discover.rs  render.rs  write.rs
src/render/: html.rs  mod.rs
src/snapshot/: store.rs
src/util/: fs.rs  mod.rs
src/watch/: mod.rs
tests/: README.md  cli.rs  config.rs  diff.rs  drivers.rs  ir.rs  layouts.rs  pipeline.rs  snapshot.rs  test_discovery.rs  test_formatters.rs  test_layouts.rs  test_markdown_generation.rs  test_phase1_5.rs  test_phase2_5.rs  test_phase2_layouts.rs  test_phase3.rs  test_rust_parser.rs
