[package]
  autobins      = false
  categories    = ["command-line-utilities", "development-tools"]
  description   = "Zero-config, language-agnostic CLI that turns any git repository into high-quality visual documentation."
  documentation = "https://docs.rs/codetwin"
  edition       = "2024"
  keywords      = ["architecture", "cli", "docs", "documentation", "generator"]
  license       = "MIT"
  name          = "codetwin"
  readme        = "README.md"
  repository    = "https://github.com/carlosferreyra/codetwin"
  rust-version  = "1.93"
  version       = "0.2.0"

[[bin]]
  name = "codetwin"
  path = "src/main.rs"

[lib]
  name = "codetwin"
  path = "src/lib.rs"

[dependencies]
  anyhow                = "1.0"
  clap                  = { version = "4.5", features = ["derive"] }
  glob                  = "0.3"
  ignore                = "0.4"
  notify-debouncer-mini = "0.4"
  petgraph              = "0.6"
  rayon                 = "1.7"
  serde                 = { version = "1.0", features = ["derive"] }
  serde_json            = "1.0"
  thiserror             = "1.0"
  toml                  = "0.8"
  tracing               = "0.1"
  tracing-subscriber    = { version = "0.3", features = ["env-filter"] }
  tree-sitter           = "0.20"
  tree-sitter-python    = "0.20"
  tree-sitter-rust      = "0.20"
  walkdir               = "2.4"

[dev-dependencies]
  pretty_assertions = "1.4"
  tempfile          = "3.10"

[profile.dev]
  debug     = true # Keep full debug info for development
  opt-level = 0    # Fast compiles for iteration

# Maximize speed for dependencies ONLY, so tree-sitter / petgraph
# aren't sluggish during `cargo run`.
[profile.dev.package."*"]
  opt-level = 3

[profile.release]
  codegen-units = 1
  lto           = "fat"
  opt-level     = 3
  panic         = "abort"
  strip         = true

[profile.dist]
  inherits = "release"

[package.metadata.dist]
  changelog = "CHANGELOG.md"
