[workspace]
  members  = ["crates/*"]
  resolver = "2"

[workspace.package]
  edition      = "2024"
  license      = "MIT"
  repository   = "https://github.com/carlosferreyra/codetwin"
  rust-version = "1.93"
  version      = "0.2.0"

[workspace.dependencies]
  # Internal crates — referenced by other workspace members via `path`.
  codetwin-cli      = { path = "crates/codetwin-cli" }
  codetwin-config   = { path = "crates/codetwin-config" }
  codetwin-drivers  = { path = "crates/codetwin-drivers" }
  codetwin-ir       = { path = "crates/codetwin-ir" }
  codetwin-legacy   = { path = "crates/codetwin-legacy" }
  codetwin-pipeline = { path = "crates/codetwin-pipeline" }
  codetwin-render   = { path = "crates/codetwin-render" }

  # External crates — pinned once here, inherited by members via `workspace = true`.
  anyhow                = "1.0"
  clap                  = { version = "4.5", features = ["derive"] }
  glob                  = "0.3"
  ignore                = "0.4"
  notify-debouncer-mini = "0.4"
  petgraph              = "0.6"
  rayon                 = "1.7"
  serde                 = { version = "1.0", features = ["derive"] }
  serde_json            = "1.0"
  thiserror             = "1.0"
  toml                  = "0.8"
  tracing               = "0.1"
  tracing-subscriber    = { version = "0.3", features = ["env-filter"] }
  tree-sitter           = "0.20"
  tree-sitter-python    = "0.20"
  tree-sitter-rust      = "0.20"
  walkdir               = "2.4"

  # Dev-only.
  pretty_assertions = "1.4"
  tempfile          = "3.10"

[profile.dev]
  debug     = true
  opt-level = 0

[profile.dev.package."*"]
  opt-level = 3

[profile.release]
  codegen-units = 1
  lto           = "fat"
  opt-level     = 3
  panic         = "abort"
  strip         = true

[profile.dist]
  inherits = "release"
