[build-system]
  build-backend = "uv_build"
  requires      = ["uv_build>=0.10.0,<0.11.0"]

[project]
  authors = [{ name = "Carlos Ferreyra" }]
  classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
  ]
  description = "Universal code to diagram generator (Rust, Python, more)"
  name = "codetwin"
  requires-python = ">=3.8"
  version = "0.1.0"

[project.urls]
  Documentation = "https://github.com/carlosferreyra/codetwin#readme"
  Homepage      = "https://github.com/carlosferreyra/codetwin"

[project.scripts]
  codetwin = "codetwin.cli:main"

[tool.uv.build-backend]
  module-name = "codetwin"
  module-root = ""
