[package]
  description  = "Internal monolith crate — being decomposed into codetwin-{ir,config,drivers,render,pipeline,cli}. Not published."
  edition      = { workspace = true }
  license      = { workspace = true }
  name         = "codetwin-legacy"
  publish      = false
  repository   = { workspace = true }
  rust-version = { workspace = true }
  version      = { workspace = true }

[lib]
  name = "codetwin_legacy"
  path = "src/lib.rs"

[dependencies]
  anyhow                = { workspace = true }
  clap                  = { workspace = true }
  glob                  = { workspace = true }
  ignore                = { workspace = true }
  notify-debouncer-mini = { workspace = true }
  petgraph              = { workspace = true }
  rayon                 = { workspace = true }
  serde                 = { workspace = true }
  serde_json            = { workspace = true }
  thiserror             = { workspace = true }
  toml                  = { workspace = true }
  tracing               = { workspace = true }
  walkdir               = { workspace = true }

  # Drivers
  tree-sitter        = { workspace = true }
  tree-sitter-python = { workspace = true }
  tree-sitter-rust   = { workspace = true }

[dev-dependencies]
  pretty_assertions = { workspace = true }
  tempfile          = { workspace = true }
